# bow_mnb

./: .gitignore  LICENSE  README.md  main.py  output.txt  outputvalidation.txt  pyproject.toml  setup.cfg
src/bow_mnb/: mnb.py
src/simple_mnb/: simple_mnb.py  train_and_test.py
src/simple_mnb2.egg-info/: PKG-INFO
src/util/: utils.py
tests/: test_module.py
