[metadata]
name=simple_mnb2
version = 0.0.1
author = Riley M. Blaylock
author_email = rileyblaylock98@gmail.com
description = Simple Multinomial Naive Bayes Classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rileymblaylock/simple_mnb
project_urls =
    Bug Tracker = https://github.com/rileymblaylock/simple_mnb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src